first commitgit push origin !

--- a/index.html
+++ b/index.html
@@ -15,15 +15,18 @@
   
   <div class="bg-warning">
     <div class="container-lg">
-     <div class="text-center py-5">
-      <img class="logo" src="./images/logo.png" alt="" width="610" height="225">
-     </div>
+      <!-- <=====POKEMON=====> -->
+      <div class="text-center py-5">
+        <!-- <====Logo images pokemon -->
+        <img class="logo" src="./images/logo.png" alt="logo-pokemon" width="610" height="225">
+      </div>
+      <!-- <=====Pokemon list=====> -->
       <ul class="js-list list d-flex flex-wrap justify-content-between p-0 m-0 gap-1" style="list-style-type: none;"></ul>
     </div>
   </div>
   
-
-<script src="./js/pokemon.js"></script>
-<script src="./js/main.js"></script>
+  
+  <script src="./js/pokemon.js"></script>
+  <script src="./js/main.js"></script>
 </body>
 </html>
