--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <!-- <====Logo images pokemon -->
         <img class="logo" src="./images/logo.png" alt="logo-pokemon" width="610" height="225">
       </div>
+      <select class="js-select"></select>
       <!-- <=====Pokemon list=====> -->
       <ul class="js-list list d-flex flex-wrap justify-content-between p-0 m-0 gap-1" style="list-style-type: none;"></ul>
     </div>
