--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
         <!-- <====Logo images pokemon -->
         <img class="logo" src="./images/logo.png" alt="logo-pokemon" width="610" height="225">
       </div>
-      <select class="js-select"></select>
+     <div class="box__select">
+      <select class="js-select fw-bolder fs-4 px-2 py-1 rounded border border-info my-5"></select>
+     </div>
       <!-- <=====Pokemon list=====> -->
       <ul class="js-list list d-flex flex-wrap justify-content-between p-0 m-0 gap-1" style="list-style-type: none;"></ul>
     </div>
